feat(go): add utilities for generating assertion helpers and AES translation context
- Add `GenerateAssertsHelper` class for automatic generation of test assertions
- Create `GoCipherContextTranslator` for translating AES-related contexts
- Enhance `GoCryptoAESTest` with assertion helper integration
- Update `GoTranslator` to delegate translation to `GoCipherContextTranslator`
- Minor refactor in `GoDetectionEngine` and test utilities to improve readability and annotation usage

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>
Signed-off-by: Nicklas Körtge <Nicklas.Koertge1@ibm.com>